--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="primeiro">
 			<div class="bg">
 					<video autoplay loop muted>
-						<source src="images/banner.mp4" type="video/mp4">
+						<source src="https://ivanaires3.github.io/NossoNamoro/banner.mp4" type="video/mp4">
 					</video>
 				</div>
 				<div class="texto">
@@ -45,7 +45,7 @@
 			<h2>Nossos Momentos</h2>
 			<div class="flex-mosaico">
 				<div class="item1-mosaico" style="order: 2;margin-left: 150px;">
-					<img src="images/imagem1.jpeg">
+					<img src="https://ivanaires3.github.io/NossoNamoro/imagem1.jpeg">
 				</div>
 				<div class="item2-mosaico" style="order: 1;">
 					<p>Não há maior felicidade neste mundo que comemorar com você mais um Dia dos Namorados! Independentemente da troca de presentes, o mais importante desta data é relembrar todos os bons momentos que já vivemos como casal. Você é a melhor companhia do mundo; me provoca múltiplos sorrisos e me encanta sempre com palavras lindas. Tenho certeza que fomos feitos um para o outro e não há ninguém melhor que você para passar o resto da minha vida.</p>
@@ -55,7 +55,7 @@
 				<div class="flex-mosaico">
 				<div class="item1-mosaico" style="order: 1">
 					<video autoplay muted loop style="max-height: 400px; margin-left: 25px; margin-top: 2%;">
-						<source src="images/video.mp4" type="video/mp4">
+						<source src="https://ivanaires3.github.io/NossoNamoro/video.mp4" type="video/mp4">
 					</video>
 				</div>
 				<div class="item2-mosaico" style="order: 2;  text-align: center;">
@@ -82,19 +82,19 @@
 			<p>Aqui eu decidi colocar alguns videos nossos, video que são uma mistura de vergonha com diversão, por que são esses pra mim, os momentos mais divertidos que ja tivemos!<i class="fa-solid fa-face-grin-squint-tears"></i></p>
 			<div class="videos-comicos um">
 				<video controls="">
-					<source src="images/video1.mp4" type="video/mp4">
+					<source src="https://ivanaires3.github.io/NossoNamoro/video1.mp4" type="video/mp4">
 				</video>
 			</div>
 
 				<div class="videos-comicos dois">
 				<video controls="">
-					<source src="images/video2.mp4" type="video/mp4">
+					<source src="https://ivanaires3.github.io/NossoNamoro/video2.mp4" type="video/mp4">
 				</video>
 			</div>
 
 			<div class="videos-comicos">
 				<video controls="">
-					<source src="images/video3.mp4" type="video/mp4">
+					<source src="https://ivanaires3.github.io/NossoNamoro/video3.mp4" type="video/mp4">
 				</video>
 			</div>
 			</div>
@@ -109,12 +109,12 @@
 			<p>É difícil abrir o coração, ainda mais depois de muito tempo fechado, mas de erro em erro, acerto em acerto, encontramos um lindo lugar, aonde o coração pode descansar, e ele não estará só, e saiba meu amor que no meu coração bagunçado só cabe você.<i class="fa-solid fa-face-grin-hearts"></i></p>
 			<div class="box-videos" style="order: 1;">
 				<video controls style="position: relative;z-index: 999">
-					<source src="images/video4.mp4" type="video/mp4">
+					<source src="https://ivanaires3.github.io/NossoNamoro/video4.mp4" type="video/mp4">
 				</video>
 			</div>
 			<div class="box-videos" id="myDiv" style="order: 2;">
 				<video controls style="position: relative;z-index: 999;">
-					<source src="images/video5.mp4" type="video/mp4">
+					<source src="https://ivanaires3.github.io/NossoNamoro/video5.mp4" type="video/mp4">
 				</video>
 			</div>
 		</div>
@@ -127,7 +127,7 @@
 			<p>Amo como ama o amor. Não conheço nenhuma outra razão para amar senão amar. Que queres que te diga, além de que te amo, se o que quero dizer-te é que te amo?</p>
 			<div class="nosso">
 				<video controls="">
-					<source src="images/video6.mp4" type="video/mp4">
+					<source src="https://ivanaires3.github.io/NossoNamoro/video6.mp4" type="video/mp4">
 				</video> 
 			</div>
 		</div>
