--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="primeiro">
 			<div class="bg">
 					<video autoplay loop muted>
-						<source src="https://ivanaires3.github.io/NossoNamoro/banner.mp4" type="video/mp4">
+						<source src="https://ivanaires3.github.io/NossoNamoro/images/banner.mp4" type="video/mp4">
 					</video>
 				</div>
 				<div class="texto">
