--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<h2>Nossos Momentos</h2>
 			<div class="flex-mosaico">
 				<div class="item1-mosaico" style="order: 2;margin-left: 150px;">
-					<img src="https://ivanaires3.github.io/NossoNamoro/images/imagem1.jpeg">
+					<img src="https://ivanaires3.github.io/NossoNamoro/imagem1.jpeg">
 				</div>
 				<div class="item2-mosaico" style="order: 1;">
 					<p>Não há maior felicidade neste mundo que comemorar com você mais um Dia dos Namorados! Independentemente da troca de presentes, o mais importante desta data é relembrar todos os bons momentos que já vivemos como casal. Você é a melhor companhia do mundo; me provoca múltiplos sorrisos e me encanta sempre com palavras lindas. Tenho certeza que fomos feitos um para o outro e não há ninguém melhor que você para passar o resto da minha vida.</p>
