--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<div class="container">
 			<div class="logo">
-				<img src="images/logo.png">
+				<img src="https://ivanaires3.github.io/NossoNamoro/images/logo.png">
 				<p>Se eu seu o que é amar, é porquê conheci você<i style="margin-left: 15px;" class="fa-solid fa-heart"></i></p>
 			</div>
 			<div class="clear"></div>
