--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="primeiro">
 			<div class="bg">
 					<video autoplay loop muted>
-						<source src="https://ivanaires3.github.io/NossoNamoro/banner.mp4" type="video/mp4">
+						<source src="https://user-images.githubusercontent.com/105604008/172542616-f3294e13-4567-4b89-9c67-86e8ffa35de3.mp4" type="video/mp4">
 					</video>
 				</div>
 				<div class="texto">
