--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<div class="container">
 			<div class="logo">
-				<img src="https://ivanaires3.github.io/NossoNamoro/images/logo.png">
+				<img src="![logo](https://user-images.githubusercontent.com/105604008/172543320-2f271ade-2202-476c-9479-0b9c5c38f58e.png)">
 				<p>Se eu seu o que é amar, é porquê conheci você<i style="margin-left: 15px;" class="fa-solid fa-heart"></i></p>
 			</div>
 			<div class="clear"></div>
