--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<h2>Nossos Momentos</h2>
 			<div class="flex-mosaico">
 				<div class="item1-mosaico" style="order: 2;margin-left: 150px;">
-					<img src="![imagem1](https://user-images.githubusercontent.com/105604008/172543761-1b791252-0983-4ed7-a3f6-98224474eaed.jpeg)
+					<img src="![imagem1](https://user-images.githubusercontent.com/105604008/172543761-1b791252-0983-4ed7-a3f6-98224474eaed.jpeg)">
 ">
 				</div>
 				<div class="item2-mosaico" style="order: 1;">
