--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/all.min.css">
-	<link rel="stylesheet" type="text/css" href="https://ivanaires3.github.io/NossoNamoro/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Dia dos namorados</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">	
@@ -13,7 +13,7 @@
 	<header>
 		<div class="container">
 			<div class="logo">
-				<img src="![logo](https://user-images.githubusercontent.com/105604008/172543320-2f271ade-2202-476c-9479-0b9c5c38f58e.png)">
+				<img src="images/logo.png">
 				<p>Se eu seu o que é amar, é porquê conheci você<i style="margin-left: 15px;" class="fa-solid fa-heart"></i></p>
 			</div>
 			<div class="clear"></div>
@@ -23,11 +23,9 @@
 	<section class="banner">
 		<div class="container">
 			<div class="primeiro">
-			<div class="bg">
 					<video autoplay loop muted>
-						<source src="https://user-images.githubusercontent.com/105604008/172542616-f3294e13-4567-4b89-9c67-86e8ffa35de3.mp4" type="video/mp4">
+						<source src="images/banner.mp4" type="video/mp4">
 					</video>
-				</div>
 				<div class="texto">
 					<p>É lindo perceber o quanto podemos crescer juntos e permitir que o nossso amor fique ainda mais maduro. E o amor é isso crescer e mudar juntos.
 					<br><br>
@@ -45,8 +43,7 @@
 			<h2>Nossos Momentos</h2>
 			<div class="flex-mosaico">
 				<div class="item1-mosaico" style="order: 2;margin-left: 150px;">
-					<img src="https://user-images.githubusercontent.com/105604008/172659952-70d7a072-6448-488a-baa3-c46e6d7160e7.jpeg">
-">
+					<img src="images/imagem1.jpeg">
 				</div>
 				<div class="item2-mosaico" style="order: 1;">
 					<p>Não há maior felicidade neste mundo que comemorar com você mais um Dia dos Namorados! Independentemente da troca de presentes, o mais importante desta data é relembrar todos os bons momentos que já vivemos como casal. Você é a melhor companhia do mundo; me provoca múltiplos sorrisos e me encanta sempre com palavras lindas. Tenho certeza que fomos feitos um para o outro e não há ninguém melhor que você para passar o resto da minha vida.</p>
@@ -56,7 +53,7 @@
 				<div class="flex-mosaico">
 				<div class="item1-mosaico" style="order: 1">
 					<video autoplay muted loop style="max-height: 400px; margin-left: 25px; margin-top: 2%;">
-						<source src="https://user-images.githubusercontent.com/105604008/172544312-a0ea94dc-fa93-4403-b494-ca1f7b543087.mp4" type="video/mp4">
+						<source src="images/video.mp4" type="video/mp4">
 					</video>
 				</div>
 				<div class="item2-mosaico" style="order: 2;  text-align: center;">
@@ -83,19 +80,19 @@
 			<p>Aqui eu decidi colocar alguns videos nossos, video que são uma mistura de vergonha com diversão, por que são esses pra mim, os momentos mais divertidos que ja tivemos!<i class="fa-solid fa-face-grin-squint-tears"></i></p>
 			<div class="videos-comicos um">
 				<video controls="">
-					<source src="https://ivanaires3.github.io/NossoNamoro/video1.mp4" type="video/mp4">
+					<source src="images/video1.mp4" type="video/mp4">
 				</video>
 			</div>
 
 				<div class="videos-comicos dois">
 				<video controls="">
-					<source src="https://ivanaires3.github.io/NossoNamoro/video2.mp4" type="video/mp4">
+					<source src="images/video2.mp4" type="video/mp4">
 				</video>
 			</div>
 
 			<div class="videos-comicos">
 				<video controls="">
-					<source src="https://ivanaires3.github.io/NossoNamoro/video3.mp4" type="video/mp4">
+					<source src="images/video3.mp4" type="video/mp4">
 				</video>
 			</div>
 			</div>
@@ -110,12 +107,12 @@
 			<p>É difícil abrir o coração, ainda mais depois de muito tempo fechado, mas de erro em erro, acerto em acerto, encontramos um lindo lugar, aonde o coração pode descansar, e ele não estará só, e saiba meu amor que no meu coração bagunçado só cabe você.<i class="fa-solid fa-face-grin-hearts"></i></p>
 			<div class="box-videos" style="order: 1;">
 				<video controls style="position: relative;z-index: 999">
-					<source src="https://ivanaires3.github.io/NossoNamoro/video4.mp4" type="video/mp4">
+					<source src="images/video4.mp4" type="video/mp4">
 				</video>
 			</div>
 			<div class="box-videos" id="myDiv" style="order: 2;">
 				<video controls style="position: relative;z-index: 999;">
-					<source src="https://ivanaires3.github.io/NossoNamoro/video5.mp4" type="video/mp4">
+					<source src="images/video5.mp4" type="video/mp4">
 				</video>
 			</div>
 		</div>
@@ -126,11 +123,9 @@
 			<div class="line"></div>
 			<h2>Declaração Final</h2>
 			<p>Amo como ama o amor. Não conheço nenhuma outra razão para amar senão amar. Que queres que te diga, além de que te amo, se o que quero dizer-te é que te amo?</p>
-			<div class="nosso">
 				<video controls="">
-					<source src="https://ivanaires3.github.io/NossoNamoro/video6.mp4" type="video/mp4">
+					<source src="images/video6.mp4" type="video/mp4">
 				</video> 
-			</div>
 		</div>
 	</section>
 
@@ -140,9 +135,5 @@
 			<p>Te amo muito meu amor, eu ainda vou me casar com você <i style="margin: 0 2% ;" class="fa-solid fa-heart"></i></p>
 		</div>	
 	</footer>
-
-	<div class="ultimo"></div>
-
-
 </body>
 </html>
